--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ nav ul li a:hover {
     color: #00ffb0;
 }
 
-/* Button style (like 'Case Studies') */
+/* Nav-Button style */
 .nav-button {
     background-color: #00ffb0;
     padding: 10px 20px;
