--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ body {
     min-height: 100vh;
 }
 
+/* Line Spacing */
+p.small {
+  line-height: 0.8;
+}
+
+p.big {
+  line-height: 1.8;
+}
+
 /* Navbar */
 nav {
     display: flex;
