--- a/style.css
+++ b/style.css
@@ -15,12 +15,13 @@ body {
 }
 
 /* Line Spacing */
-p.small {
-  line-height: 0.8;
+p {
+  line-height: 1.8;
 }
 
-p.big {
-  line-height: 1.8;
+h3 {
+    font-size: 24px;
+    margin-bottom: 20px;
 }
 
 /* Navbar */
