--- a/style.css
+++ b/style.css
@@ -5,8 +5,23 @@
     box-sizing: border-box;
 }
 
+.aleo-regular {
+  font-family: "Aleo", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.archivo-regular {
+  font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 100;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}
+
 body {
-    font-family: Arial, sans-serif;
     background-color: #1e1e1e;
     color: #fff;
     display: flex;
@@ -50,6 +65,7 @@ p {
 
 /* Navbar */
 nav {
+    font-family: "Archivo", serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -90,12 +106,19 @@ nav ul li a:hover {
 
 /* Nav-Button style */
 .nav-button {
+    font-family: "Archivo", serif;
     background-color: #00ffb0;
     padding: 10px 20px;
     border-radius: 25px;
     color: #111;
     font-weight: bold;
     text-decoration: none;
+    transition: transform 0.2s, background-color 0.2s;
+}
+
+.nav-button:hover {
+    transform: scale(1.05);        /* slightly grow button */
+    background-color: #00d199;     /* slightly darker green on hover */
 }
 
 /* Centered page content */
